ADD: check new popups button

--- a/assets/scss/modules/_popups.scss
+++ b/assets/scss/modules/_popups.scss
@@ -24,6 +24,11 @@
 	}
 }
 
+.cbw-popups__clear-cache {
+	padding: 22px 0 0 0;
+	margin: 0 0 -15px;
+}
+
 .cbw-popups-filters {
 	padding: 10px 0 25px;
 	&__list {
